<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="check_updates"
        android:summary="@string/new_updates_desc"
        android:title="@string/new_updates" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_wifi_only"
        android:summary="@string/wifi_only_desc"
        android:title="@string/on_wifi_only" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_auto_updates"
        android:summary="@string/auto_update_desc"
        android:title="@string/auto_update" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_miui_check"
        android:summary="@string/miui_channel_desc"
        android:title="@string/miui_channel" />
</PreferenceScreen>