<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A2237"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.codebot.axel.codex.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#424961"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/xda_constraint_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#424961"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/xda_round_imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/codexinfo_xda_textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/xda_dev_textView"
                            app:srcCompat="@mipmap/ic_xda_round" />

                        <TextView
                            android:id="@+id/xda_dev_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/xda_developers"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/xda_round_imageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/codexinfo_xda_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/codexinfo_xda"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/xda_dev_textView"
                            app:layout_constraintStart_toStartOf="@+id/xda_dev_textView"
                            app:layout_constraintTop_toBottomOf="@+id/xda_dev_textView" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#424961"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_imageView">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/updates_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#424961"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/updates_check_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/check_for_updates"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#424961"
                    android:focusable="auto"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/cardView2"
                    app:layout_constraintStart_toStartOf="@+id/cardView2"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#424961">

                        <TextView
                            android:id="@+id/rominfo_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:drawableStart="@drawable/round_error_outline_white_24"
                            android:fontFamily="sans-serif"
                            android:text="@string/device_info"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/divider"
                            app:layout_constraintEnd_toEndOf="@+id/rominfo_textView"
                            app:layout_constraintStart_toStartOf="@+id/rominfo_textView"
                            app:layout_constraintTop_toBottomOf="@+id/rominfo_textView" />


                        <TextView
                            android:id="@+id/device_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/round_smartphone_white_24"
                            android:fontFamily="sans-serif"
                            android:text="@string/device"
                            android:textColor="#FFFFFF"
                            app:layout_constraintEnd_toEndOf="@+id/rominfo_textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/view" />

                        <TextView
                            android:id="@+id/model_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/round_perm_device_information_white_24"
                            android:fontFamily="sans-serif"
                            android:text="@string/model"
                            android:textColor="#FFFFFF"
                            app:layout_constraintEnd_toEndOf="@+id/device_textView"
                            app:layout_constraintStart_toStartOf="@+id/device_textView"
                            app:layout_constraintTop_toBottomOf="@+id/device_textView" />

                        <TextView
                            android:id="@+id/kernel_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="16dp"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/round_android_white_24"
                            android:fontFamily="sans-serif"
                            android:text="@string/kernel"
                            android:textColor="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/model_textView"
                            app:layout_constraintStart_toStartOf="@+id/model_textView"
                            app:layout_constraintTop_toBottomOf="@+id/model_textView" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#424961"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/cardView3"
                    app:layout_constraintStart_toStartOf="@+id/cardView3"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/telegram_constraint_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#424961"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/telegram_imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/direct_support_info_textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/direct_support_textView"
                            app:srcCompat="@mipmap/ic_telegram" />

                        <TextView
                            android:id="@+id/direct_support_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/direct_support"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/telegram_imageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/direct_support_info_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/direct_support_info"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/direct_support_textView"
                            app:layout_constraintStart_toStartOf="@+id/direct_support_textView"
                            app:layout_constraintTop_toBottomOf="@+id/direct_support_textView" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <ImageView
                    android:id="@+id/logo_imageView"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressTint="@color/kinda_teal"
                    app:layout_constraintBottom_toTopOf="@+id/cardView2"
                    app:layout_constraintEnd_toStartOf="@+id/percentage_textView"
                    app:layout_constraintStart_toStartOf="@+id/cardView2" />

                <TextView
                    android:id="@+id/percentage_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="#FFFFFF"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/logo_imageView"
                    app:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>